idk what i added, <MIM at least idk lol
and <MS4, <CXP, <CYP, <CXO

--- a/CaveStory/todo.txt
+++ b/CaveStory/todo.txt
@@ -15,3 +15,5 @@
 [x] PHY
 [x] CBK
 [x] VAR and all of its commands
+[x] Collectables X/Y position is customizable in save file
+[-] BLO command? (Boss expLOsion at npc?)
