current progress on <CSF/<STT/<NPT
its about time i work on this collab stuff i suppose

--- a/CaveStory/todo.txt
+++ b/CaveStory/todo.txt
@@ -22,3 +22,11 @@
 [x] Collectables X/Y position is customizable in save file
 [x] BLO command? (Boss expLOsion at npc?)
 [x] ClearArmsData / ClearItemData commands
+[-] <STT/NPT
+	-Documentation on them
+[-] <CSF saved to the save file and loaded with LoadProfile? This could help with the collab..
+	-Surfaces are now loaded based on settings.ini strings
+	-Need to save them to the profile and load them, as well as have a function for Loading the GenericData safely.
+	
+# Other #
+[-] Load organya files from folder and also allow the folder to be changed (collab mod)
